#2356 Audio playback redesign. Resolves audio playback issue on some (e.g. Kubuntu) systems.  For stereo playback, consolidates left and right channels into a single playback channel.  Implements continuous audio streaming using silence to fill the gaps to avoid mixer source data line start/stop issues.  Code structure is ready to layer on multi-channel (ie 5.1 or 7.1) audio playback devices, but that hasn't been tested.